# pomodoro-timer

./: .gitignore  CLAUDE.md  README.md  flake.nix  meson.build  plan.md
.claude-flow/metrics/: performance.json  task-metrics.json
data/: com.github.user.PomodoroTimer.appdata.xml.in  com.github.user.PomodoroTimer.gresource.xml  meson.build
js/: .gitignore  README.md  package.json
js/public/: index.html
js/src/: PomodoroTimer.js  Timer.js  cli.js  index.js
js/tests/integration/: pomodoro-flow.test.js
js/tests/unit/: PomodoroTimer.test.js  Timer.test.js
memory/agents/: README.md
memory/sessions/: README.md
pomodoro-timer-rust/: Cargo.toml
pomodoro-timer-rust/src/: app_model.rs  eye_check_model.rs  lib.rs  main_app.rs  settings_model.rs  timer.rs  timer_model.rs
rust/: Cargo.toml  README.md  flake.nix
rust/examples/: timer_usage.rs
rust/src/: app_model.rs  lib.rs  main.rs  main_app.rs  timer.rs  timer_model.rs
src/: eye-check-dialog.vala  meson.build  notification-manager.vala  window.vala
tests/: meson.build  test-application.vala  test-eye-check-dialog.vala  test-integration.vala  test-main-window.vala  test-notification-manager.vala  test-timer.vala
vala/: README.md  flake.nix
vala/data/: com.github.user.PomodoroTimer.desktop.in  com.github.user.PomodoroTimer.gschema.xml  meson.build
vala/data/ui/: window.ui
vala/src/: application.vala  eye-check-dialog.vala  main.vala  meson.build  timer.vala
vala/tests/: test-application.vala  test-integration.vala  test-timer.vala
