[package]
name = "pomodoro-timer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = "0.8"
relm4-components = "0.8"
gtk = { version = "0.8", package = "gtk4" }
adw = { version = "0.6", package = "libadwaita" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
notify-rust = "4.0"

[dev-dependencies]
tokio-test = "0.4"
